# cmake-learn

./: CMakeLists.txt
lib/: CMakeLists.txt  hello.cpp  hello.h
src/: main.cpp
